<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DFEBFA"
    tools:context=".SDEFIELDLIST_ACTIVITY.SdeFieldListConfigureLm_Activity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            tools:ignore="NewApi">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/bharat_sanchar_nigam_ltd"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="NewApi">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sde_worklist"
                android:layout_centerVertical="true"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/tableHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false"
                    android:background="#c0c0c0">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1.2"
                        android:text="@string/lm_code"
                        android:textStyle="bold"
                        android:textColor="@color/colorBackground"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:background="@drawable/tablerow_design"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.5"
                        android:text="@string/p"
                        android:textStyle="bold"
                        android:textColor="@color/colorBackground"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:background="@drawable/tablerow_design"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.5"
                        android:text="@string/c"
                        android:textStyle="bold"
                        android:textColor="@color/colorBackground"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:background="@drawable/tablerow_design"/>


                    <TextView
                        android:id="@+id/textViewConfigureLm"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1.2"
                        android:text="@string/assign_lm"
                        android:textStyle="bold"
                        android:textColor="@color/colorBackground"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:background="@drawable/tablerow_design"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:scrollbars="vertical"
                    android:layout_below="@id/tableHeader"/>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/updateData"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardElevation="5dp"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_marginLeft="100dp"
                android:layout_marginStart="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginEnd="100dp"
                app:cardCornerRadius="10dp"
                android:onClick="updateSdeLmData"
                android:layout_below="@id/recycler_view">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:text="@string/submit_data"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"/>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:id="@+id/textViewCopyRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copyright_message"
                android:textAlignment="center"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>


        </LinearLayout>


    </LinearLayout>
</LinearLayout>
