<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DFEBFA"
    tools:context=".SDEFIELDLIST_ACTIVITY.SdeFieldListConfigureLm_Activity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="NewApi">
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="NewApi">


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">


            <androidx.cardview.widget.CardView
                android:id="@+id/tableHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false"
                    android:background="#c0c0c0">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1.2"
                        android:text="@string/personal_num"
                        android:textStyle="bold"
                        android:textColor="@color/colorBackground"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:background="@drawable/tablerow_design"/>


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1.2"
                        android:text="@string/primary_lmc"
                        android:textStyle="bold"
                        android:textColor="@color/colorBackground"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:background="@drawable/tablerow_design"/>


                    <TextView
                        android:id="@+id/textViewConfigureLm"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1.2"
                        android:text="@string/alm_count"
                        android:textStyle="bold"
                        android:textColor="@color/colorBackground"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:background="@drawable/tablerow_design"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:scrollbars="vertical"
                android:layout_below="@id/tableHeader"
                android:layout_above="@id/textViewCopyRight"/>


            <TextView
                android:id="@+id/textViewCopyRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copyright_message"
                android:textAlignment="center"
                android:layout_marginTop="100dp"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_centerInParent="true"/>


        </RelativeLayout>

    </ScrollView>
</LinearLayout>